--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -11,7 +11,7 @@
 
 <body>
     <load
-    src="./partials/header.html"
+    src="./header.html"
     highlight-act="active"
     />
     <ul class="gallery"></ul>
