--- a/src/2-form.html
+++ b/src/2-form.html
@@ -10,7 +10,7 @@
 
 <body>
   <load
-    src="/partials/header.html"
+    src="./header.html"
     highlight-curr="active"
   />
     <form class="feedback-form" autocomplete="off">
