--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <main>
-        <ul class='main-page-ul'>
+        <!-- <ul class='main-page-ul'>
           <li style="display: none;"><a href="./1-gallery.html">Gallery</a></li>
           <li style="display: none;"><a href="./2-form.html">Form</a></li>
-        </ul>
-      <load src="./partials/header.html" highlight-act2="active"/>
+        </ul> -->
+      <load src="./header.html" highlight-act2="active"/>
       <div class="container">
         <h1 class="main-title">
           <span class="main-title-gradient">Welcome to my HW</span>
