--- a/src/2-form.html
+++ b/src/2-form.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback form</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
   <load
-    src="./header.html"
+    src="header.html"
     highlight-curr="active"
   />
     <form class="feedback-form" autocomplete="off">
@@ -25,5 +25,5 @@
         <button type="submit">Submit</button>
     </form>
 
-    <script src="./js/2-form.js" type="module"></script>
+    <script src="js/2-form.js" type="module"></script>
 </body>
