--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <main>
@@ -12,7 +12,7 @@
           <li style="display: none;"><a href="./1-gallery.html">Gallery</a></li>
           <li style="display: none;"><a href="./2-form.html">Form</a></li>
         </ul> -->
-      <load src="./header.html" highlight-act2="active"/>
+      <load src="header.html" highlight-act2="active"/>
       <div class="container">
         <h1 class="main-title">
           <span class="main-title-gradient">Welcome to my HW</span>
