--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.css" rel="stylesheet" />
 </head>
 
 <body>
     <load
-    src="/header.html"
+    src="./header.html"
     highlight-act="active"
     />
     <ul class="gallery"></ul>
 
     <script src="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.js"></script>
-    <script src="/js/1-gallery.js" type="module"></script>
+    <script src="./js/1-gallery.js" type="module"></script>
 </body>
 
 </html>
