--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terokhin HW-01</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <main>
-      <load src="/header.html" highlight-act2="active"/>
+      <load src="./header.html" highlight-act2="active"/>
       <div class="container">
         <h1 class="main-title">
           <span class="main-title-gradient">Welcome to my HW</span>
