--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,17 +7,26 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.css" rel="stylesheet" />
 </head>
-
 <body>
-    <load
-    src="./header.html"
-    highlight-act="active"
-    />
+<header class="header">
+  <div class="container">
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a class="nav-link {=$highlight-act2}" href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active {=$highlight-act}" href="./1-gallery.html">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {=$highlight-curr}" href="./2-form.html">Form</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
     <ul class="gallery"></ul>
-
     <script src="https://cdn.jsdelivr.net/npm/simplelightbox/dist/simple-lightbox.min.js"></script>
     <script src="./js/1-gallery.js" type="module"></script>
 </body>
-
 </html>
-
