--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,24 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link active {=$highlight-act2}" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {=$highlight-act}" href="./1-gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {=$highlight-curr}" href="./2-form.html">Form</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main>
-      <load src="./header.html" highlight-act2="active"/>
       <div class="container">
         <h1 class="main-title">
           <span class="main-title-gradient">Welcome to my HW</span>
